syntax = "proto3";

import "tracing/proto/tracing.proto";

option go_package = "sigmaos/cache/proto";

service Cache {
  rpc Get(CacheRequest) returns (CacheResult);
  rpc Set(CacheRequest) returns (CacheResult);
  rpc Delete(CacheRequest) returns (CacheResult);
}

message CacheRequest {
  string key = 1;
  bytes value = 2;
  SpanContextConfig spanContextConfig = 3;
}

message CacheResult {
  bytes value = 1;
}

message CacheDump {
  map<string, bytes> vals = 1;
}

message CacheString {
  string val = 1;
}

message CacheInt {
  int64 val = 1;
}
