syntax = "proto3";

option go_package = "sigmaos/kv/proto";

message KVTestVal {
  string pid = 1;
  string key = 2;
  uint64 n = 3;
}
